2020925 リファクタリング